// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Alert Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  <p
    class="svelte-hu9od6"
  >
    Error Alert
  </p>
   
  <div
    class="mzp-c-notification-bar mzp-t-error error svelte-brev3v"
  >
    <svg
      height="50px"
      viewBox="0 0 24 24"
      width="80px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-linecap="round"
        stroke-width="1"
      >
        <g
          stroke="#000000"
          stroke-width="2"
          transform="translate(6.000000, 6.000000)"
        >
          <path
            d="M0,0 L12,12"
          />
          <path
            d="M0,12 L12,0"
          />
        </g>
      </g>
    </svg>
     
    <div
      class="alert-text svelte-brev3v"
    >
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
      
      
    </div>
  </div>
   
  <p
    class="svelte-hu9od6"
  >
    Warning Alert
  </p>
   
  <div
    class="mzp-c-notification-bar mzp-t-warning warning svelte-brev3v"
  >
    <svg
      height="50px"
      viewBox="0 0 24 24"
      width="80px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-width="1"
      >
        <g
          transform="translate(1.000000, 2.000000)"
        >
          <path
            d="M9.29,1.86 L0.82,16 C0.464641628,16.6153996 0.462519934,17.3731469 0.81442652,17.9905269 C1.16633311,18.6079069 1.81941202,18.9921898 2.53,19 L19.47,19 C20.180588,18.9921898 20.8336669,18.6079069 21.1855735,17.9905269 C21.5374801,17.3731469 21.5353584,16.6153996 21.18,16 L12.71,1.86 C12.3474343,1.26228132 11.6990862,0.897255995 11,0.897255995 C10.3009138,0.897255995 9.65256566,1.26228132 9.29,1.86 Z"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M11,7 L11,11"
            stroke="#000000"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <circle
            cx="11"
            cy="15"
            fill="#000000"
            r="1"
          />
        </g>
      </g>
    </svg>
     
    <div
      class="alert-text svelte-brev3v"
    >
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
      
      
    </div>
  </div>
   
  <p
    class="svelte-hu9od6"
  >
    Success Alert
  </p>
   
  <div
    class="mzp-c-notification-bar mzp-t-success success svelte-brev3v"
  >
    <svg
      height="50px"
      viewBox="0 0 24 24"
      width="80px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1"
      >
        <polyline
          points="20 6 9 17 4 12"
          stroke="#000000"
          stroke-width="2"
        />
      </g>
    </svg>
     
    <div
      class="alert-text svelte-brev3v"
    >
      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
      
      
    </div>
  </div>
</section>
`;

exports[`Storyshots App Variant Selector Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <label
    for="app_id"
  >
    Application Variant
  </label>
   
  <select
    name="app_id"
  >
    <option
      value="org.mozilla.fenix"
    >
      nightly
      
        (
      org.mozilla.fenix
      )
       
    </option>
    <option
      value="org.mozilla.fenix_release"
    >
      release
      
        (
      org.mozilla.fenix_release
      )
       
    </option>
  </select>
</section>
`;

exports[`Storyshots Authenticated Link Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  <a
    class="svelte-1j28ehe"
    href="https://glam.telemetry.mozilla.org"
  >
    GLAM
  </a>
   
  <a
    class="lock-link svelte-1j28ehe"
    href="https://docs.telemetry.mozilla.org/concepts/gaining_access.html"
  >
    <span
      aria-label="access limited"
      class="svelte-1j28ehe"
      role="img"
    >
      🔒
    </span>
  </a>
</section>
`;

exports[`Storyshots Breadcrumb App Details Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="breadcrumb svelte-4hkg9y"
  >
    <ol
      class="svelte-4hkg9y"
    >
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/"
        >
          apps
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        -&gt;
      </span>
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/apps/fenix/"
        >
          fenix
        </a>
      </li>
       
      <img
        alt="Platform Logo"
        class="svelte-4hkg9y"
        src="/img/app-logos/android-breadcrumb.png"
      />
       
      <span
        class="svelte-4hkg9y"
      >
        
      </span>
    </ol>
  </div>
</section>
`;

exports[`Storyshots Breadcrumb Apps List Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="breadcrumb svelte-4hkg9y"
  >
    <ol
      class="svelte-4hkg9y"
    >
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/"
        >
          apps
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        
      </span>
    </ol>
  </div>
</section>
`;

exports[`Storyshots Breadcrumb Big Query Table Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="breadcrumb svelte-4hkg9y"
  >
    <ol
      class="svelte-4hkg9y"
    >
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/"
        >
          apps
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        -&gt;
      </span>
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/apps/fenix/"
        >
          fenix
        </a>
      </li>
       
      <img
        alt="Platform Logo"
        class="svelte-4hkg9y"
        src="/img/app-logos/android-breadcrumb.png"
      />
       
      <span
        class="svelte-4hkg9y"
      >
        -&gt;
      </span>
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/apps/fenix/pings/activation"
        >
          activation
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        -&gt;
      </span>
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/apps/fenix/tables/activation/"
        >
          activation table
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        
      </span>
    </ol>
  </div>
</section>
`;

exports[`Storyshots Breadcrumb Metric Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="breadcrumb svelte-4hkg9y"
  >
    <ol
      class="svelte-4hkg9y"
    >
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/"
        >
          apps
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        -&gt;
      </span>
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/apps/fenix/"
        >
          fenix
        </a>
      </li>
       
      <img
        alt="Platform Logo"
        class="svelte-4hkg9y"
        src="/img/app-logos/android-breadcrumb.png"
      />
       
      <span
        class="svelte-4hkg9y"
      >
        -&gt;
      </span>
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/apps/fenix/metrics/about_page.libraries_tapped"
        >
          about_page.libraries_tapped
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        
      </span>
    </ol>
  </div>
</section>
`;

exports[`Storyshots Breadcrumb Ping Page 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="breadcrumb svelte-4hkg9y"
  >
    <ol
      class="svelte-4hkg9y"
    >
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/"
        >
          apps
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        -&gt;
      </span>
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/apps/fenix/"
        >
          fenix
        </a>
      </li>
       
      <img
        alt="Platform Logo"
        class="svelte-4hkg9y"
        src="/img/app-logos/android-breadcrumb.png"
      />
       
      <span
        class="svelte-4hkg9y"
      >
        -&gt;
      </span>
      <li
        class="svelte-4hkg9y"
      >
        <a
          class="link-name svelte-4hkg9y"
          href="/apps/fenix/pings/activation"
        >
          activation
        </a>
      </li>
       
       
      <span
        class="svelte-4hkg9y"
      >
        
      </span>
    </ol>
  </div>
</section>
`;

exports[`Storyshots FilterInput Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="container"
  >
    <div
      class="svelte-150ybko"
    >
      <input
        class="svelte-150ybko"
        id="filter-input"
        type="search"
      />
    </div>
     
    <ul>
      <li>
        foo
      </li>
      <li>
        bar
      </li>
      <li>
        foobar
      </li>
      <li>
        lorem
      </li>
      <li>
        ipsum
      </li>
    </ul>
  </div>
</section>
`;

exports[`Storyshots ItemList Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="svelte-1cr1lhe"
  >
    <span
      class="expire-checkbox svelte-1cr1lhe"
    >
      <label
        class="svelte-1cr1lhe"
      >
        <input
          class="svelte-1cr1lhe"
          type="checkbox"
        />
        
        Show expired and removed metrics
      </label>
       
      <label
        class="svelte-1cr1lhe"
      >
        <input
          class="svelte-1cr1lhe"
          type="checkbox"
        />
        
        Paginate
      </label>
    </span>
     
    <div
      class="svelte-150ybko"
    >
      <input
        class="svelte-150ybko"
        id="filter-input"
        placeholder="Search metrics"
        type="search"
      />
    </div>
     
    <div
      class="item-browser svelte-1cr1lhe"
    >
      <table
        class="mzp-u-data-table svelte-1cr1lhe"
      >
        <col
          class="svelte-1cr1lhe"
          width="35%"
        />
         
        <col
          class="svelte-1cr1lhe"
          width="20%"
        />
         
        <col
          class="svelte-1cr1lhe"
          width="45%"
        />
         
        <thead
          class="svelte-1cr1lhe"
        >
          <tr
            class="svelte-1cr1lhe"
          >
            <th
              class="svelte-1cr1lhe"
              scope="col"
              style="text-align: center;"
            >
              Name
            </th>
             
            <th
              class="svelte-1cr1lhe"
              scope="col"
              style="text-align: center;"
            >
              Type
            </th>
             
            <th
              class="svelte-1cr1lhe"
              scope="col"
              style="text-align: center;"
            >
              Description
            </th>
          </tr>
        </thead>
         
        <tbody
          class="svelte-1cr1lhe"
        >
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 0"
                  style=""
                >
                  test metric 0
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 0"
              >
                This is test metric 0
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 1"
                  style=""
                >
                  test metric 1
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 1"
              >
                This is test metric 1
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 2"
                  style=""
                >
                  test metric 2
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 2"
              >
                This is test metric 2
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 3"
                  style=""
                >
                  test metric 3
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 3"
              >
                This is test metric 3
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 4"
                  style=""
                >
                  test metric 4
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 4"
              >
                This is test metric 4
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 5"
                  style=""
                >
                  test metric 5
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 5"
              >
                This is test metric 5
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 6"
                  style=""
                >
                  test metric 6
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 6"
              >
                This is test metric 6
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 7"
                  style=""
                >
                  test metric 7
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 7"
              >
                This is test metric 7
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 8"
                  style=""
                >
                  test metric 8
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 8"
              >
                This is test metric 8
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 9"
                  style=""
                >
                  test metric 9
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 9"
              >
                This is test metric 9
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 10"
                  style=""
                >
                  test metric 10
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 10"
              >
                This is test metric 10
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 11"
                  style=""
                >
                  test metric 11
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 11"
              >
                This is test metric 11
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 12"
                  style=""
                >
                  test metric 12
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 12"
              >
                This is test metric 12
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 13"
                  style=""
                >
                  test metric 13
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 13"
              >
                This is test metric 13
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 14"
                  style=""
                >
                  test metric 14
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 14"
              >
                This is test metric 14
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 15"
                  style=""
                >
                  test metric 15
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 15"
              >
                This is test metric 15
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 16"
                  style=""
                >
                  test metric 16
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 16"
              >
                This is test metric 16
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 17"
                  style=""
                >
                  test metric 17
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 17"
              >
                This is test metric 17
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 18"
                  style=""
                >
                  test metric 18
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 18"
              >
                This is test metric 18
                
                
              </div>
            </td>
             
          </tr>
          <tr
            class="svelte-1cr1lhe"
          >
            <td
              class="svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <a
                  class="svelte-1cr1lhe"
                  href="/apps/app-name/metrics/test metric 19"
                  style=""
                >
                  test metric 19
                </a>
                 
                 
                 
                 
                 
              </div>
            </td>
             
            <td
              class="svelte-1cr1lhe"
              style="text-align: center;"
            >
              <div
                class="item-property svelte-1cr1lhe"
              >
                <code
                  class="svelte-1cr1lhe"
                >
                  metric_type
                </code>
              </div>
            </td>
             
            <td
              class="description svelte-1cr1lhe"
            >
              <div
                class="item-property svelte-1cr1lhe"
                title="This is test metric 19"
              >
                This is test metric 19
                
                
              </div>
            </td>
             
          </tr>
        </tbody>
      </table>
    </div>
     
     
    <div
      class="pagination-position svelte-1j3q2vf"
    >
      <p
        class="svelte-1j3q2vf"
      >
        Page
    
        <code
          class="svelte-1j3q2vf"
        >
          1
        </code>
        
    of
    
        <code
          class="svelte-1j3q2vf"
        >
          2
        </code>
        
    (
        <code
          class="svelte-1j3q2vf"
        >
          1
        </code>
        
    -
    
        <code
          class="svelte-1j3q2vf"
        >
          20
        </code>
        
    on
    
        <code
          class="svelte-1j3q2vf"
        >
          21
        </code>
        
    items)
      </p>
    </div>
     
    <div
      class="pagination-bar svelte-1j3q2vf"
    >
      <div
        class="pagination-button current-page svelte-1j3q2vf"
      >
        <svg
          class="feather feather-chevron-left w-6 h-6"
          fill="none"
          height="100%"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 18 9 12 15 6"
          />
        </svg>
      </div>
       
      <div
        class="pages svelte-1j3q2vf"
      >
        <div
          class="page current-page svelte-1j3q2vf"
        >
          1
           
        </div>
        <div
          class="page  svelte-1j3q2vf"
        >
          2
           
        </div>
      </div>
       
      <div
        class="pagination-button  svelte-1j3q2vf"
      >
        <svg
          class="feather feather-chevron-right w-6 h-6"
          fill="none"
          height="100%"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </div>
    </div>
    
  </div>
</section>
`;

exports[`Storyshots Label Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h4>
    Color Palette
  </h4>
   
  <p>
    By default, the label color is generated from the label text, but you can
  choose a specific color from the below palette by setting a 
    <code>
      labelNumber
    </code>
     variable.
  </p>
   
  <span
    class="label label-0  svelte-3vlii"
  >
    label-0
  </span>
   
  <span
    class="label label-1  svelte-3vlii"
  >
    label-1
  </span>
   
  <span
    class="label label-2  svelte-3vlii"
  >
    label-2
  </span>
   
  <span
    class="label label-3  svelte-3vlii"
  >
    label-3
  </span>
   
  <span
    class="label label-4  svelte-3vlii"
  >
    label-4
  </span>
   
  <span
    class="label label-5  svelte-3vlii"
  >
    label-5
  </span>
   
  <span
    class="label label-6  svelte-3vlii"
  >
    label-6
  </span>
   
  <span
    class="label label-7  svelte-3vlii"
  >
    label-7
  </span>
   
  <span
    class="label label-8  svelte-3vlii"
  >
    label-8
  </span>
   
  <span
    class="label label-9  svelte-3vlii"
  >
    label-9
  </span>
   
  <br />
   
  <br />
   
  <h4>
    Labels with description (hover over)
  </h4>
   
  <span
    class="label label-4  svelte-3vlii"
  >
    Descriptive
  </span>
   
  <span
    class="label label-3  svelte-3vlii"
  >
    Descriptive markdown
  </span>
   
  <br />
   
  <br />
   
  <h4>
    Glean labels
  </h4>
   
  <span
    class="label label-9  svelte-3vlii"
  >
    glean-core
  </span>
   
  <span
    class="label label-1  svelte-3vlii"
  >
    glean-android
  </span>
   
  <span
    class="label label-5  svelte-3vlii"
  >
    sync
  </span>
   
  <span
    class="label label-5  svelte-3vlii"
  >
    lib-crash
  </span>
   
  <span
    class="label label-6  svelte-3vlii"
  >
    engine-gecko
  </span>
   
  <span
    class="label label-2  svelte-3vlii"
  >
    support-migration
  </span>
   
  <span
    class="label label-4  svelte-3vlii"
  >
    nimbus
  </span>
   
  <span
    class="label label-4  svelte-3vlii"
  >
    logins-store
  </span>
   
  <br />
   
  <br />
   
  <h4>
    Deprecated/Expired status
  </h4>
   
  <span
    class="label label-9  svelte-3vlii"
  >
    deprecated
  </span>
   
  <span
    class="label label-9  svelte-3vlii"
  >
    expired
  </span>
</section>
`;

exports[`Storyshots Markdown Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  <p>
    A 
    <em>
      text
    </em>
     in markdown 
    <a
      href="https://mozilla.org"
    >
      moz
    </a>
    .
  </p>
  

  <p>
    A list:
  </p>
  

  <ul
    class="mzp-u-list-styled"
  >
    <li>
      Lorem
    </li>
    

    <li>
      Ipsum
    </li>
    

  </ul>
  <p>
    This is an ordered list starting from 2:
  </p>
  

  <ol
    class="mzp-u-list-styled"
    start="2"
  >
    <li>
      Foo
    </li>
    

    <li>
      Bar
    </li>
    

  </ol>
  
  
</section>
`;

exports[`Storyshots Markdown Text With HTML 1`] = `
<section
  class="storybook-snapshot-container"
>
  <p>
    Markdown with inline 
    <span
      style="color: blue"
    >
      HTML
    </span>
     (unquoted) and more angle 
    <code>
      &lt;brackets&gt;
    </code>
     (quoted)
  </p>
  

  
  
</section>
`;

exports[`Storyshots Metadata Table Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <table
    class="svelte-pv533o"
  >
    <col
      class="svelte-pv533o"
    />
     
    <col
      class="svelte-pv533o"
    />
     
    <tr
      class="svelte-pv533o"
    >
      <td
        class="svelte-pv533o"
      >
        Source
         
        <div
          class="main svelte-1q4i4i8"
        >
          <span
            class="svelte-1q4i4i8"
          >
            <svg
              class="w-5 inline-block svelte-iwm6zn"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="svelte-iwm6zn"
                clip-rule="evenodd"
                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </td>
       
      <td
        class="svelte-pv533o"
      >
        <a
          class="svelte-pv533o"
          href="https://github.com/mozilla/testapp"
        >
          https://github.com/mozilla/testapp
        </a>
      </td>
    </tr>
    
    <tr
      class="svelte-pv533o"
    >
      <td
        class="svelte-pv533o"
      >
        Notification Emails
         
        <div
          class="main svelte-1q4i4i8"
        >
          <span
            class="svelte-1q4i4i8"
          >
            <svg
              class="w-5 inline-block svelte-iwm6zn"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="svelte-iwm6zn"
                clip-rule="evenodd"
                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </td>
       
      <td
        class="svelte-pv533o"
      >
        <div
          class="svelte-pv533o"
        >
          <a
            class="svelte-pv533o"
            href="mailto:test@mozilla.com"
          >
            test@mozilla.com
          </a>
        </div>
        
      </td>
    </tr>
    
    <tr
      class="svelte-pv533o"
    >
      <td
        class="svelte-pv533o"
      >
        Rentention Period
         
        <div
          class="main svelte-1q4i4i8"
        >
          <span
            class="svelte-1q4i4i8"
          >
            <svg
              class="w-5 inline-block svelte-iwm6zn"
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="svelte-iwm6zn"
                clip-rule="evenodd"
                d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </td>
       
      <td
        class="svelte-pv533o"
      >
        Unlimited
      </td>
    </tr>
    
     
  </table>
</section>
`;

exports[`Storyshots Pagination Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="pagination-position svelte-142bri5"
  >
    <p
      class="svelte-142bri5"
    >
      Page
    
      <code
        class="svelte-142bri5"
      >
        1
      </code>
      
    of
    
      <code
        class="svelte-142bri5"
      >
        11
      </code>
      
    (
      <code
        class="svelte-142bri5"
      >
        1
      </code>
      
    -
    
      <code
        class="svelte-142bri5"
      >
        20
      </code>
      
    on
    
      <code
        class="svelte-142bri5"
      >
        210
      </code>
      
    items)
    </p>
  </div>
   
  <div
    class="pagination-bar svelte-142bri5"
  >
    <div
      class="pagination-button current-page svelte-142bri5"
    >
      <svg
        class="feather feather-chevron-left w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="15 18 9 12 15 6"
        />
      </svg>
    </div>
     
    <div
      class="pages svelte-142bri5"
    >
      <div
        class="page current-page svelte-142bri5"
      >
        1
         
      </div>
      <div
        class="page  svelte-142bri5"
      >
        2
         
      </div>
      <div
        class="page  svelte-142bri5"
      >
        3
         
      </div>
      <div
        class="page  svelte-142bri5"
      >
        ...
         
      </div>
      <div
        class="page  svelte-142bri5"
      >
        11
         
      </div>
    </div>
     
    <div
      class="pagination-button  svelte-142bri5"
    >
      <svg
        class="feather feather-chevron-right w-6 h-6"
        fill="none"
        height="100%"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 18 15 12 9 6"
        />
      </svg>
    </div>
  </div>
  
</section>
`;

exports[`Storyshots Schema Viewer Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="schema-viewer svelte-a5udfx"
  >
    <div
      class="svelte-150ybko"
    >
      <input
        class="svelte-150ybko"
        id="filter-input"
        type="search"
      />
    </div>
     
    <div
      class="schema-browser svelte-a5udfx"
    >
      <p
        class="svelte-a5udfx"
      >
        <div
          class="svelte-1f521da"
          style=""
        >
          <p
            class="node svelte-1f521da"
          >
            <span
              class="parent-node svelte-1f521da"
            >
              
              
            </span>
            <span
              class="svelte-1f521da"
            >
              additional_properties
            </span>
             
            <p
              class="node-description svelte-1f521da"
            >
              A JSON string containing any payload properties not present in the schema
            </p>
             
          </p>
        </div>
         
        
        <div
          class="svelte-1f521da"
          style=""
        >
          <p
            class="node svelte-1f521da"
          >
            <span
              class="parent-node svelte-1f521da"
            >
              
              
            </span>
            <span
              class="svelte-1f521da"
            >
              client_info
            </span>
             
             
          </p>
        </div>
         
        <div
          class="svelte-1f521da"
          style=""
        >
          <p
            class="node svelte-1f521da"
          >
            <span
              class="parent-node svelte-1f521da"
            >
              client_info
              .
            </span>
            <span
              class="svelte-1f521da"
            >
              os_version
            </span>
             
            <p
              class="node-description svelte-1f521da"
            >
              The user-visible version of the operating system (e.g. "1.2.3"). If the version detection fails, this metric gets set to \`Unknown\`.
            </p>
             
          </p>
        </div>
         
        
        <div
          class="svelte-1f521da"
          style=""
        >
          <p
            class="node svelte-1f521da"
          >
            <span
              class="parent-node svelte-1f521da"
            >
              client_info
              .
            </span>
            <span
              class="svelte-1f521da"
            >
              telemetry_sdk_build
            </span>
             
            <p
              class="node-description svelte-1f521da"
            >
              The version of the Glean SDK
            </p>
             
          </p>
        </div>
         
        
        
        
        <div
          class="svelte-1f521da"
          style=""
        >
          <p
            class="node svelte-1f521da"
          >
            <span
              class="parent-node svelte-1f521da"
            >
              
              
            </span>
            <span
              class="svelte-1f521da"
            >
              document_id
            </span>
             
            <p
              class="node-description svelte-1f521da"
            >
              The document ID specified in the URI when the client sent this message
            </p>
             
          </p>
        </div>
         
        
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots Sub-heading Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h2
    class="svelte-1hwa112"
  >
    Commentary
     
    <div
      class="main svelte-1q4i4i8"
    >
      <span
        class="svelte-1q4i4i8"
      >
        <svg
          class="w-5 inline-block svelte-iwm6zn"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="svelte-iwm6zn"
            clip-rule="evenodd"
            d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </h2>
</section>
`;

exports[`Storyshots Tab Basic 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="tabs svelte-6hpzgj"
  />
   
  <div
    class="tab-content svelte-6hpzgj"
  >
    <div
      class="title svelte-bym1mj active"
    >
      A
    </div>
    <div
      class="title svelte-bym1mj"
    >
      B
    </div>
     
    <div
      class="box svelte-d478du"
    >
      Content for Tab A
    </div>
    
    
    
  </div>
</section>
`;
